--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "devDependencies": {
     "chroma-js": "^1.2.1",
-    "data.task": "^3.1.1"
+    "data.task": "^3.1.1",
+    "eslint": "^3.13.1"
   }
 }
